UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_User_Approval_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Approval_Group_Behavior__c</fullName>
        <label>Approval Group Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single User</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Account based</fullName>
                </value>
                <value>
                    <fullName>Product based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Approver_Group_Name__c</fullName>
        <label>Approver Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phoenix_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Active_User__c</fullName>
        <formula>Phoenix_Approver__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Approval_Process_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approval Process User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Phoenix_User_Approval_Matrix__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Approval User Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Phoenix_User_Approval_Matrix__c</referenceTo>
        <relationshipLabel>User_Groups</relationshipLabel>
        <relationshipName>User_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_Group__c</columns>
        <columns>Phoenix_Approver__c</columns>
        <columns>Phoenix_Is_Active_User__c</columns>
        <columns>Phoenix_Is_Approval_Process_User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Approval_Process_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approval_Groups</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Approver_Group_Name__c</columns>
        <columns>Phoenix_Approval_Group_Behavior__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Phoenix_User_Approval_Matrix__c.Approval_User_Group</value>
        </filters>
        <label>Approval Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approval_Users</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Approver__c</columns>
        <columns>Phoenix_Is_Approval_Process_User__c</columns>
        <columns>User_Group__c</columns>
        <columns>Phoenix_Is_Active_User__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Phoenix_User_Approval_Matrix__c.Approval_Users</value>
        </filters>
        <label>Approval Users</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>User Approval Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Approval Matrix</pluralLabel>
    <recordTypes>
        <fullName>Approval_User_Group</fullName>
        <active>true</active>
        <description>This will be used to manage different approver teams and their approval behavior.</description>
        <label>Approval User Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Users</fullName>
        <active>true</active>
        <label>Approval Users</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>